# prj008-2d-platformer-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Sources/: Config.h  main.cpp
Sources/Core/: Application.cpp  Application.h  ApplicationCore.h  Colors.cpp  Colors.h  DebugInfo.cpp  DebugInfo.h  Error.cpp  Error.h  Guid.cpp  Guid.h  IRenderSurface.h  Log.cpp  Log.h  ObjectPool.h  RenderCore.h  Time.cpp  Time.h  Window.h
Sources/ECS/: Component.h  ComponentFactory.h  ComponentFactoryImpl.cpp  ComponentFactoryImpl.h  ComponentTupleContainer.h  ComponentTypes.h  Entity.h  EntityManager.cpp  EntityManager.h  System.h
Sources/ECS/Components/: ColliderComponent.h  PlayerControllerComponent.h  SingletonCamera.h  SingletonInput.h  SingletonPhysicsContactInfo.h  SingletonPhysicsWorld.h  SingletonPlayerCommand.h
Sources/ECS/Systems/: ActorControllerSystem.cpp  ActorControllerSystem.h  CommandSystem.cpp  CommandSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderingSystem.cpp  RenderingSystem.h
Sources/Editor/: Editor.cpp  Editor.h  EditorMainWindow.cpp  EditorMainWindow.h
Sources/Editor/Windows/: EditorWindow.h  GameViewWindow.cpp  GameViewWindow.h
Sources/File/: FileReader.h  FileWriter.h  Utils.h
Sources/Game/: Game.cpp  Game.h  GameMainWindow.cpp  GameMainWindow.h  MyStruct.cpp  MyStruct.h  Reflection.h
Sources/Math/: Util.h  Vector.cpp  Vector2.h  Vector4.h
Sources/Memory/: Memory.h
Sources/Reflection/: DefineTypeInfo.cpp  DefineTypeInfo.h  PropertyInfo.h  RegisterTypeInfo.cpp  RegisterTypeInfo.h  TypeId.h  TypeIdInternal.h  TypeInfo.cpp  TypeInfo.h  TypeInfoData.h  TypeInfoDatabase.cpp  TypeInfoDatabase.h  TypeOffset.h  Utils.h
Sources/Serialize/: PrimitiveTypeSerializer.cpp  PrimitiveTypeSerializer.h  StreamBuffer.h  StreamBufferRead.cpp  StreamBufferRead.h  StreamBufferReadWrite.cpp  StreamBufferReadWrite.h  Utils.h
Sources/Util/: BitFlag.h  Extension.h  Format.h  NonCopyable.h  NonMovable.h  PhysicsContactListener.cpp  PhysicsContactListener.h  Platform.h  PrimitiveTypes.h  Singleton.h  StringBuilder.h  StringHash.h  TextUtils.h  TypeIndex.h
